force-app/main/default/objects/Rental__c/fields/Business_Partner__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner__c</fullName>
    <label>Business Partner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>