force-app/main/default/objects/Rental__c/fields/Business_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Partner_Id__c</fullName>
    <label>Business Partner Id</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>