force-app/main/default/objects/Rental__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Four Seasons</fullName>
            </value>
            <value>
                <fullName>Fraserway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>