force-app/main/default/objects/Rental__c/fields/Departure_Location__c.field-meta.xml
<CustomField>
    <fullName>Departure_Location__c</fullName>
    <label>Departure Location</label>
    <length>40</length>
    <type>Text</type>
</CustomField>