force-app/main/default/objects/Rental__c/fields/Departure_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Departure_Location_Id__c</fullName>
    <label>Departure Location Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>