force-app/main/default/objects/Rental__c/fields/GVWR_Kg__c.field-meta.xml
<CustomField>
    <fullName>GVWR_Kg__c</fullName>
    <label>GVWR Kg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>