force-app/main/default/objects/Rental__c/fields/Height_Ft_ln__c.field-meta.xml
<CustomField>
    <fullName>Height_Ft_ln__c</fullName>
    <label>Height Ft ln</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>