force-app/main/default/objects/Rental__c/fields/Key_Code__c.field-meta.xml
<CustomField>
    <fullName>Key_Code__c</fullName>
    <label>Key Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>