force-app/main/default/objects/Rental__c/fields/Length_Ft_ln__c.field-meta.xml
<CustomField>
    <fullName>Length_Ft_ln__c</fullName>
    <label>Length Ft ln</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>