force-app/main/default/objects/Rental__c/fields/Make_Id__c.field-meta.xml
<CustomField>
    <fullName>Make_Id__c</fullName>
    <label>Make Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>