force-app/main/default/objects/Rental__c/fields/Odometer_in__c.field-meta.xml
<CustomField>
    <fullName>Odometer_in__c</fullName>
    <label>Odometer in</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>