force-app/main/default/objects/Rental__c/fields/Odometer_out__c.field-meta.xml
<CustomField>
    <fullName>Odometer_out__c</fullName>
    <label>Odometer out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>