force-app/main/default/objects/Rental__c/fields/Rental_Number__c.field-meta.xml
<CustomField>
    <fullName>Rental_Number__c</fullName>
    <externalId>true</externalId>
    <label>Rental Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>