force-app/main/default/objects/Rental__c/fields/Rental_Status__c.field-meta.xml
<CustomField>
    <fullName>Rental_Status__c</fullName>
    <label>Rental Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>