force-app/main/default/objects/Rental__c/fields/Return_Location__c.field-meta.xml
<CustomField>
    <fullName>Return_Location__c</fullName>
    <label>Return Location</label>
    <length>40</length>
    <type>Text</type>
</CustomField>