force-app/main/default/objects/Rental__c/fields/Return_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Return_Location_Id__c</fullName>
    <label>Return Location Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>