force-app/main/default/objects/Rental__c/fields/Stock_Number__c.field-meta.xml
<CustomField>
    <fullName>Stock_Number__c</fullName>
    <formula>Vehicle__r.Stock_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Number</label>
    <type>Text</type>
</CustomField>